// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<label
  className="cf-1cshl9m"
>
  FormLabel
</label>
`;

exports[`should render hidden 1`] = `
<label
  className="cf-1kmb73d"
>
  FormLabel
</label>
`;
